[package]
name = "menbei"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
repository = "https://github.com/k-nasa/menbei"
description = "Tool to generate github issue link"
license-file = "LICENSE"
readme = "README.md"
keywords = ["cli"]
edition = "2018"

[dependencies]
clap = "2.23.0"
failure = "0.1.5"
regex = "1.1.5"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
toml = "0.5"
url = "1.7"
